Fixing some CSS for the line/point_of_interest view
The overlay (green) is too much on the left of the image.

--- a/tutorial-steps/part1/step2/assets/css/style.css
+++ b/tutorial-steps/part1/step2/assets/css/style.css
@@ -459,7 +459,8 @@ hr {
 
 .caption {
   position: absolute;
-  width: 90.5%;
+  margin-left: 1em;
+  width: 100%;
   height: 100%;
   opacity: 0;
   background: rgba(16,115,96,.9);
